Fixed Navbar menu overlap and added padding for text.

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -22,10 +22,13 @@ html {
   margin-right: auto;
   margin-left: auto;
   background-color: white;
+  p, h1, h2, h3, h4 {
+    margin: 10px;
+	padding: 10px;
+  }
 }
 
 .row {
-  display: -ms-flexbox;
   display: flex;
   flex-wrap: wrap;
   margin-left: -15px;
@@ -195,7 +198,7 @@ p, address {
 .tm-nav-li {
   list-style: none;
   display: block;
-  margin-bottom: 0;
+  margin-bottom: 25px;
   padding-right: 25px;
   padding-left: 25px;
 }
@@ -237,7 +240,6 @@ p, address {
   max-width: 280px;
   margin-left: auto;
   margin-right: auto;
-  display: -ms-flexbox;
   display: flex;
   flex-wrap: wrap;
 }
